istio/vs-books.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
spec:
  hosts:
  - "*"
  gateways:
  - books-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: books
        subset: v1
      weight: 50
    - destination:
        host: books
        subset: v2
      weight: 30
    - destination:
        host: books
        subset: v3
      weight: 20
